// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
  margin-bottom: 10px;
}

.IS3 {
  margin-right: 10px;
  margin-left: 10px;
  margin-top: 10px;
}

.IS4 {
  width: 100%;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S2"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        LABEL
      </div>
    </div>
    <h3
      aria-level="3"
      className="IS2 S3"
      role="heading"
    >
      This is tile headline
    </h3>
    <div
      className="S4"
    >
      <ArticleFlags
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
  <div
    className="IS4 S2"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
</Link>
`;

exports[`2. tile b 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S6 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 25px;
  line-height: 25px;
}

.IS3 {
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S2"
  >
    <div
      className="S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S5"
      >
        <span
          className="S4"
        >
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div
        className="S6"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`3. tile c 1`] = `
<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  margin-bottom: 0px;
}

.S4 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.IS1 {
  width: 100%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  line-height: 22px;
  padding-bottom: 5px;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="IS1 S1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="S3"
  >
    <div
      className="S3"
    >
      <div
        className="IS2 S2"
      >
        LABEL
      </div>
    </div>
    <h3
      aria-level="3"
      className="IS3 S4"
      role="heading"
    >
      This is tile headline
    </h3>
    <div
      className="S1"
    >
      <ArticleFlags
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`4. tile d 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 10px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  width: 45%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  line-height: 22px;
}

.IS4 {
  padding-right: 10px;
  padding-left: 10px;
  padding-bottom: 5px;
  width: 55%;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1.5}
        uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </div>
    <div
      className="IS4 S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`5. tile e 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  width: 45%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  line-height: 22px;
}

.IS4 {
  padding-right: 10px;
  padding-left: 10px;
  padding-bottom: 5px;
  width: 55%;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={0.8}
        uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
      />
    </div>
    <div
      className="IS4 S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`6. tile f 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  font-family: TimesModern-Regular;
  font-size: 19px;
  font-weight: inherit;
  line-height: 21px;
  margin-bottom: 0px;
}

.S5 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S6 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S7 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
}

.IS3 {
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S2"
  >
    <div
      className="S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="S4"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <div
        className="S6"
      >
        <span
          className="S5"
        >
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div
        className="S7"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`7. tile g 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  border-top-color: rgba(255,255,255,1.00);
  border-right-color: rgba(255,255,255,1.00);
  border-bottom-color: rgba(255,255,255,1.00);
  border-left-color: rgba(255,255,255,1.00);
  border-top-width: 1px;
  border-right-width: 1px;
  border-bottom-width: 1px;
  border-left-width: 1px;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 30%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  line-height: 22px;
  padding-bottom: 5px;
}

.IS4 {
  -webkit-justify-content: center;
  justify-content: center;
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 5px;
  width: 70%;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 10px;
  padding-right: 10px;
  padding-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1}
        borderRadius={153.6}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </div>
    <div
      className="IS4 S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`8. tile h 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 10px;
}

.S4 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S6 {
  margin-bottom: 10px;
}

.S7 {
  color: rgba(51,51,51,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  font-weight: inherit;
  line-height: 15px;
  margin-bottom: 0px;
}

.S8 {
  color: inherit;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
  font-size: 14px;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  line-height: 22px;
}

.IS3 {
  padding-top: 10px;
  padding-right: 10px;
  width: 50%;
}

.IS4 {
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 10px;
  width: 50%;
  -ms-flex-pack: end;
  -webkit-box-pack: end;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 10px;
  padding-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S2"
  >
    <div
      className="IS3 S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S5"
      >
        <span
          className="S4"
        >
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div
        className="S6"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
      <div
        className="S8"
      >
        <span
          className="S7"
        >
          Libby Purves
        </span>
      </div>
    </div>
    <div
      className="IS4 S2"
    >
      <div
        className="S2"
      >
        <Image
          aspectRatio={0.6666666666666666}
          uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`9. tile i 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 10px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  width: 100%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  font-size: 35px;
  line-height: 35px;
  text-align: center;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  background-color: rgba(240,240,240,1.00);
  padding-right: 40px;
  padding-left: 40px;
  padding-bottom: 15px;
  padding-top: 20px;
  -ms-flex-align: center;
  -webkit-box-align: center;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS1 S1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="IS4 S1"
  >
    <div
      className="S1"
    >
      <div
        className="IS2 S2"
      >
        LABEL
      </div>
    </div>
    <h3
      aria-level="3"
      className="IS3 S3"
      role="heading"
    >
      This is tile headline
    </h3>
    <div
      className="S4"
    >
      <ArticleFlags
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`10. tile j 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 10px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  width: 40%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  line-height: 22px;
}

.IS4 {
  padding-right: 10px;
  padding-left: 10px;
  width: 60%;
}

.IS5 {
  padding-top: 10px;
  padding-right: 10px;
  padding-left: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1.5}
        uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </div>
    <div
      className="IS4 S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`11. tile l 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  line-height: 20px;
  margin-bottom: 10px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 20px;
}

.IS3 {
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S2"
  >
    <div
      className="S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`12. tile m 1`] = `
<style>
.S1 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.S2 {
  color: rgba(105,105,105,1.00);
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 0px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  margin-bottom: 0px;
}

.IS1 {
  line-height: 22px;
  margin-top: 20px;
  text-align: center;
}

.IS2 {
  font-family: TimesDigitalW04-Regular;
  text-align: center;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="S4"
  >
    <div
      className="S4"
    >
      <h3
        aria-level="3"
        className="IS1 S1"
        role="heading"
      >
        Driving Off
      </h3>
      <h4
        aria-level="4"
        className="IS2 S2"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <div
        className="S3"
      >
        <ArticleFlags />
      </div>
    </div>
  </div>
</Link>
`;

exports[`13. tile n 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  font-family: TimesModern-Regular;
  font-size: 19px;
  font-weight: inherit;
  line-height: 21px;
  margin-bottom: 0px;
}

.S5 {
  margin-bottom: 10px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  color: rgba(204,204,204,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  line-height: 22px;
}

.IS4 {
  padding-right: 10px;
  padding-left: 10px;
  width: 50%;
}

.IS5 {
  background-color: rgba(39,45,52,1.00);
  padding-top: 10px;
  padding-right: 10px;
  padding-left: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </div>
    <div
      className="IS4 S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="S4"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <div
        className="S5"
      >
        <ArticleFlags
          color="#CCC"
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`14. tile o 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(204,204,204,1.00);
}

.IS2 {
  color: rgba(255,255,255,1.00);
  line-height: 22px;
  margin-bottom: 11px;
  margin-top: 5px;
}

.IS3 {
  background-color: rgba(39,45,52,1.00);
  padding-top: 10px;
  padding-right: 12px;
  padding-left: 12px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S2"
  >
    <div
      className="S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          color="#CCC"
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`15. tile p 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  font-family: TimesModern-Regular;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 0px;
}

.S5 {
  margin-bottom: 10px;
}

.S6 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: inherit;
  margin-bottom: 0px;
}

.S7 {
  color: inherit;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
  font-size: 14px;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.IS1 {
  border-top-color: rgba(255,255,255,1.00);
  border-right-color: rgba(255,255,255,1.00);
  border-bottom-color: rgba(255,255,255,1.00);
  border-left-color: rgba(255,255,255,1.00);
  border-top-width: 1px;
  border-right-width: 1px;
  border-bottom-width: 1px;
  border-left-width: 1px;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 30%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  color: rgba(29,29,27,1.00);
  font-size: 35px;
  line-height: 35px;
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 10px;
  text-align: center;
}

.IS4 {
  padding-right: 40px;
  padding-left: 40px;
  text-align: center;
}

.IS5 {
  color: rgba(133,0,41,1.00);
  letter-spacing: 0.6px;
  line-height: 12px;
}

.IS6 {
  -webkit-align-items: center;
  align-items: center;
  padding-top: 10px;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS7 {
  -webkit-align-items: center;
  align-items: center;
  padding-top: 20px;
  padding-bottom: 20px;
  -ms-flex-align: center;
  -webkit-box-align: center;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS7 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1}
        borderRadius={153.6}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </div>
    <div
      className="IS6 S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="IS4 S4"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <div
        className="S5"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
      <div
        className="S7"
      >
        <span
          className="IS5 S6"
        >
          Libby Purves
        </span>
      </div>
    </div>
  </div>
</Link>
`;

exports[`16. tile q 1`] = `
<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  margin-bottom: 0px;
}

.IS1 {
  width: 100%;
}

.IS2 {
  -webkit-align-items: center;
  align-items: center;
  padding-top: 10px;
  -ms-flex-align: center;
  -webkit-box-align: center;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS2 S2"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1.5}
        uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </div>
  </div>
</Link>
`;

exports[`17. tile r 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 45px;
  line-height: 45px;
}

.IS3 {
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 15px;
  padding-top: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S2"
  >
    <div
      className="S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="S2"
    >
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </div>
  </div>
</Link>
`;

exports[`18. tile s 1`] = `
<style>
.S1 {
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: inherit;
  line-height: inherit;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  font-family: TimesModern-Bold;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 0px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
  margin-bottom: 15px;
}

.IS2 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS3 {
  color: #1D1D1B;
  font-weight: bold;
}

.IS4 {
  color: #1D1D1B;
  font-weight: bold;
}

.IS5 {
  margin-top: 10px;
}
</style>

<div
  className="S2"
>
  <div
    className="IS2 S2"
  >
    <div
      className="IS1 S1"
    >
      Nature notes
    </div>
  </div>
  <div
    className="S3"
  >
    <p>
      <b
        className="IS3"
      >
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b
        className="IS4"
      >
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </div>
  <div
    className="IS5 S4"
  >
    <span>
      Libby Purves
    </span>
  </div>
</div>
`;

exports[`19. tile t 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  line-height: 22px;
}

.IS4 {
  padding-top: 5px;
  padding-right: 10px;
  padding-bottom: 5px;
  padding-left: 10px;
  width: 50%;
}

.IS5 {
  padding-top: 10px;
  padding-right: 10px;
  padding-left: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </div>
    <div
      className="IS4 S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`20. tile u 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 25px;
  line-height: 25px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.IS3 {
  padding-bottom: 5px;
  width: 40%;
}

.IS4 {
  width: 60%;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-top: 10px;
  padding-right: 10px;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S2"
  >
    <div
      className="IS3 S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="IS4 S2"
    >
      <Image
        aspectRatio={1.5}
        uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </div>
  </div>
</Link>
`;

exports[`21. tile v 1`] = `
<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  margin-bottom: 0px;
}

.S4 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.IS1 {
  width: 100%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  font-size: 35px;
  line-height: 35px;
  padding-bottom: 5px;
}

.IS4 {
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS4 S3"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </div>
    <div
      className="S3"
    >
      <div
        className="S3"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S4"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S1"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`22. tile w 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S6 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
}

.IS3 {
  padding-bottom: 5px;
  padding-right: 20px;
  width: 33.33%;
}

.IS4 {
  width: 66.66%;
}

.IS5 {
  padding-top: 10px;
  padding-right: 20px;
  padding-left: 20px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S2"
  >
    <div
      className="IS3 S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S5"
      >
        <span
          className="S4"
        >
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div
        className="S6"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="IS4 S2"
    >
      <Image
        aspectRatio={1.5}
        uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </div>
  </div>
</Link>
`;

exports[`23. tile x 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  font-weight: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S6 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S7 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 45px;
  line-height: 45px;
}

.IS3 {
  font-family: TimesDigitalW04-Regular;
  font-size: 25px;
  line-height: 25px;
  padding-bottom: 5px;
}

.IS4 {
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS4 S2"
  >
    <div
      className="S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="IS3 S4"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <div
        className="S6"
      >
        <span
          className="S5"
        >
          
          ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
          ...
        </span>
      </div>
      <div
        className="S7"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`24. tile y 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S6 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="S2"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        LABEL
      </div>
    </div>
    <h3
      aria-level="3"
      className="IS2 S3"
      role="heading"
    >
      This is tile headline
    </h3>
    <div
      className="S5"
    >
      <span
        className="S4"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </span>
    </div>
    <div
      className="S6"
    >
      <ArticleFlags
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`25. tile z 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 10px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
}

.IS3 {
  margin-top: 10px;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S4"
  >
    <div
      className="S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="S2"
    >
      <Image
        aspectRatio={0.8}
        uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
      />
    </div>
  </div>
</Link>
`;

exports[`26. tile aa 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 10px;
}

.IS1 {
  padding-bottom: 5px;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  font-size: 30px;
  line-height: 30px;
}

.IS4 {
  padding-top: 5px;
  padding-bottom: 5px;
}

.IS5 {
  padding-right: 10px;
  padding-left: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </div>
    <div
      className="IS4 S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS3 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S4"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`27. tile ab 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S6 {
  margin-bottom: 10px;
}

.S7 {
  color: rgba(51,51,51,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  font-weight: inherit;
  line-height: 15px;
  margin-bottom: 0px;
}

.S8 {
  color: inherit;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
  font-size: 14px;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 30px;
  line-height: 30px;
}

.IS3 {
  padding-top: 10px;
  padding-right: 10px;
  width: 50%;
}

.IS4 {
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 10px;
  width: 50%;
  -ms-flex-pack: end;
  -webkit-box-pack: end;
}

.IS5 {
  padding-right: 10px;
  padding-left: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS5 S2"
  >
    <div
      className="IS3 S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S5"
      >
        <span
          className="S4"
        >
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div
        className="S6"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
      <div
        className="S8"
      >
        <span
          className="S7"
        >
          Libby Purves
        </span>
      </div>
    </div>
    <div
      className="IS4 S2"
    >
      <div
        className="S2"
      >
        <Image
          aspectRatio={0.6666666666666666}
          uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`28. tile ae 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S6 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
}

.IS3 {
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S2"
  >
    <div
      className="S2"
    >
      <div
        className="S2"
      >
        <div
          className="IS1 S1"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="IS2 S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="S5"
      >
        <span
          className="S4"
        >
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div
        className="S6"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`29. tile ag 1`] = `
<style>
.S1 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S2 {
  color: rgba(105,105,105,1.00);
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 0px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  margin-bottom: 0px;
}

.IS1 {
  font-size: 30px;
  line-height: 30px;
  margin-top: 20px;
  text-align: center;
}

.IS2 {
  font-family: TimesDigitalW04-Regular;
  text-align: center;
}

.IS3 {
  padding-right: 20px;
  padding-left: 20px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS3 S4"
  >
    <div
      className="S4"
    >
      <h3
        aria-level="3"
        className="IS1 S1"
        role="heading"
      >
        Driving Off
      </h3>
      <h4
        aria-level="4"
        className="IS2 S2"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <div
        className="S3"
      >
        <ArticleFlags />
      </div>
    </div>
  </div>
</Link>
`;

exports[`30. tile aj 1`] = `
<style>
.S1 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S2 {
  margin-bottom: 0px;
}

.IS1 {
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 15px;
  width: 85%;
}

.IS2 {
  -webkit-align-self: flex-end;
  align-self: flex-end;
  width: 85%;
  -ms-flex-item-align: end;
}

.IS3 {
  background-color: rgba(240,240,240,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  margin-top: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
    }
  }
  url="/crossword/123"
>
  <div
    className="IS3 S2"
  >
    <div
      className="IS1 S2"
    >
      <h3
        aria-level="3"
        className="S1"
        role="heading"
      >
        Times Concise medium No 7881
      </h3>
    </div>
    <div
      className="IS2 S2"
    >
      <Image
        aspectRatio={1.5}
        uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
      />
    </div>
  </div>
</Link>
`;

exports[`31. tile ak 1`] = `
<style>
.S1 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S2 {
  margin-bottom: 0px;
}

.IS1 {
  font-size: 25px;
}

.IS2 {
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 15px;
  width: 85%;
}

.IS3 {
  -webkit-align-self: flex-end;
  align-self: flex-end;
  width: 85%;
  -ms-flex-item-align: end;
}

.IS4 {
  background-color: rgba(240,240,240,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  margin-right: 5px;
  margin-left: 5px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
    }
  }
  url="/crossword/123"
>
  <div
    className="IS4 S2"
  >
    <div
      className="IS2 S2"
    >
      <h3
        aria-level="3"
        className="IS1 S1"
        role="heading"
      >
        Times Concise medium No 7881
      </h3>
    </div>
    <div
      className="IS3 S2"
    >
      <Image
        aspectRatio={1.5}
        uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
      />
    </div>
  </div>
</Link>
`;

exports[`32. tile al 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 0px;
}

.S4 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 14px;
  font-weight: inherit;
  margin-bottom: 10px;
}

.S6 {
  margin-bottom: 10px;
}

.IS1 {
  padding-top: 10px;
  width: 100%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  font-family: TimesDigitalW04-Regular;
  width: 100%;
}

.IS4 {
  padding-right: 10px;
  padding-left: 10px;
}
</style>

<Link
  url="/article/123"
>
  <div
    className="IS4 S1"
  >
    <div
      className="IS1 S1"
    >
      <Image
        aspectRatio={1.5}
        uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </div>
    <div
      className="S1"
    >
      <div
        className="S1"
      >
        <div
          className="IS2 S2"
        >
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        className="S3"
        role="heading"
      >
        This is tile headline
      </h3>
      <div
        className="IS3 S5"
      >
        <span
          className="S4"
        >
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div
        className="S6"
      >
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;
